fix: overflow-x

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,6 +25,7 @@ body {
   font-family: Jost, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 img,
 picture,
